Fix style on iphone

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 km-root {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: block;
 }
